--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id='phone_minus_btn' class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="Phone_total_input_feilr" type="number" min="0" class="form-control text-center"
+                              value="1">
+                           <button id="Phone_plus_Btn" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5>$<span id="Phone_tk_Desplay">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -45,12 +46,12 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id="Case_mainus_btn" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="case_total" type="number" min="0" class="form-control text-center" value="1">
+                           <button id="Case_Plus_Btn" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$59</h5>
+                        <h5>$<span id="Phone_case_tk_Desplay">59</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -66,9 +67,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$<span id="Subtotal_desplay">1278</span></h5>
+                        <h5>$<span id="Tex_desplay">0</span></h5>
+                        <h5>$<span id="Total_desplay">1278</span></h5>
                      </div>
                   </div>
                </div>
@@ -79,6 +80,9 @@
          </div>
       </div>
    </section>
+   <script src="./Js/utlity.js"></script>
+   <script src="./Js/Phone.js"></script>
+   <script src="./Js/case.js"></script>
 </body>
 
 </html>
